# Dino

./: CMakeLists.txt  Makefile
include/: Dino.h  Game.h  Obstacle.h
src/: Dino.cpp  Game.cpp  Obstacle.cpp  main.cpp
